--- a/ausarbeitung.tex
+++ b/ausarbeitung.tex
@@ -217,6 +217,8 @@ Die Anzahl der darzustellenden Objekte mit WebGL übertrifft die der anderen Tec
 Dadurch, dass die Anzahl der Objekte immer konstant bleibt, ist ein statischer Puffer für die Textur-Koordinaten völlig ausreichend - dieser muss zu Beginn einmal befüllt werden und kann dann im Grafikspeicher verbleiben.
 \paragraph{Effizienter Shader} Der Shader-Code wird für jeden Frame, den die Grafikkarte an den Bildschirm weitergibt, tausende Male aufgerufen. Zwar wird dieser in nativen Op-Code kompiliert und somit sehr effizient durchgeführt, dennoch ist es empfehlenswert, hier möglichst sparsam mit den Resourcen den Grafikkarte umzugehen und keine komplizierten Berechnungen durchzuführen. Im Benchmark-Test gibt es keine Rotation oder ähnliches, also müssen die Pixel-Koordinaten nur in Clipspace-Koordinaten von -1 bis 1 umgerechnet werden und rechenaufwändige Operationen wie Sinus werden gespart.
 \paragraph{Batch-Verarbeitung} Der Flaschenhals bei der Verwendung von WebGL ist die Datenübertragung aus dem JavaScript-Kontext in den Speicher der Grafikkarte. Daher lohnt es sich, die Koordinaten für das Zeichnen von gleichartigen Objekten alle gleichzeitig in den Grafikspeicher zu übertragen, um dann alle Objekte auf einmal zeichnen zu lassen, statt für jedes Objekt den Kontext zu wechseln; also die Koordinaten eines Objekts zu übertragen, das Objekt zeichnen lassen, und dann die Koordianten des nächsten Objekts zu übertragen. In der WebGL-Implementierung des Benchmark-Tests explodierte die Anzahl der gezeichneten Objekte bei 30FPS von knapp 4.000 auf über 80.000. Um die Performance-Vorteile von WebGL nutzen zu können, muss diese Optimierung also unbedingt ausgeführt werden, wie zum Beispiel im pixi.js-Framework.
+\paragraph{Treiber-Probleme} In ungünstigen Situationen kann WebGL eine sehr schlechte Performance liefern, obwohl die oben genannten Optimierungen angewand wurden. Ursache ist in vielen Fällen die fehlende Unterstützung der WebGL-Implementierung für die im Rechner verbaute Grafikkarte. Hier empfiehlt es sich, die Grafik-Treiber und den Browser immer aktuell zu halten.
+\paragraph{Performance-Bremsen} Gerade in Chrome sind standardmäßig viele Einstellungen aktiviert, die in gewissen Konstellationen von Browser, Betriebssystem und Hardware zu Problemen führen können. Leider ist es als Entwickler kaum möglich, Abhilfe für diese Probleme zu schaffen, es muss jedoch bei der Programmierung bewusst sein, dass die Performance auf dem Entwicklungs-Rechner bei gewissen Kunden nicht erreicht werden kann.
 \paragraph{Dataflow} Bei der Optimierung von WebGL-Anwendungen ist es wichtig, zu verstehen, wie eine GPU arbeitet. Eine GPU verarbeitet einen Strom von Daten - am effizientesten ist es, diesen Strom so selten wie möglich zu unterbrechen oder zu verlangsamen. Zum Beispiel benötigt der Upload einer Textur in den Grafikspeicher einige Zeit. Wenn also direkt nach einem Textur-Upload ein Zeichenbefehl für diese Textur übetragen wird, blockiert die GPU, bis die Textur vollständig gelesen wird. Also sollten zuerst andere Zeichen-Operationen durchgeführt werden, bis die Textur vollständig geladen ist. Ein anderes Beispiel sind sogenannte \emph{Readbacks}, bei denen Daten von der GPU zurück in den JavaScript-Kontext geladen werden. Für diese Operation muss die JavaScript-Ausführung blockiert werden, bis die GPU die Daten geliefert hat. In dieser Zeit können keine Zeichen-Operationen von JavaScript and die Grafikkarte übermittelt werden und der Daten-Strom setzt aus. Daher sollten Readbacks soweit wie möglich vermieden werden.
 \paragraph{Ausblick} Da durch WebGL alle Fähigkeiten einer Grafikkarte in JavaScript offen gelegt werden, ist eine sehr genaue Steuerung und damit auch Optimierung des Zeichenprozesses möglich. Diese genau zu erklären, würde den Rahmen in dieser Ausarbeitung sprengen. Zusammenfassend lässt sich sagen, dass WebGL zwar kompliziert und die dahinterstehenden Konzepte umfangreich und schwierig zu verstehen sind, die Technologie selbst aber dadurch in Sachen Performance den anderen vorgestellten Technologien deutlich überlegen ist. 
 %TODO: quote https://docs.google.com/presentation/d/12AGAUmElB0oOBgbEEBfhABkIMCL3CUX7kdAPLuwZ964
