--- a/ausarbeitung.tex
+++ b/ausarbeitung.tex
@@ -59,7 +59,7 @@ Zur Performance-Messung der verschiedenen Technologien wird eine einfache Beispi
 	\newpage
 \end{figure}
 Außerdem kann per Klick der Benchmark-Wert für alle Technologien nacheinander ermittelt werden. Diese Tests werden dann auf möglichst vielen verschiedenen Geräten und Browsern durchgeführt. So entsteht eine gute Übersicht, was eine Technologie leisten kann.
-\paragraph{Browser-Verlgeich} Für die Performance-Messungen in diesem Dokument wurde für jede Technologie der Benchmark in 3 Browsern durchlaufen: Firefox, Chrome und Internet Explorer. Dabei wurden die Tests auf meinem Mittelklasse-PC mit Windows 7 und aktuellen Grafiktreibern durchgeführt. Eine Grafik veranschaulicht jeweils die Ergebnisse.
+\paragraph{Browser-Verlgeich} Für die Performance-Messungen in diesem Dokument wurde für jede Technologie der Benchmark in 3 Browsern durchlaufen: Firefox, Chrome und Internet Explorer. Dabei wurden die Tests auf einem Mittelklasse-PC mit Windows 7 und aktuellen Grafiktreibern durchgeführt. Eine Grafik veranschaulicht jeweils die Ergebnisse.
 \newpage
 \section{HTML5-Canvas}
 \paragraph{} Eine tolle Möglichkeit, im Browser pixelgenaue Grafiken zu erzeugen, ist die HTML5 Canvas-API. Indem immer wieder eine Szene mit neuen Parametern gezeichnet wird, kann auf diese Weise ein 2D-Spiel programmiert werden.
@@ -102,13 +102,10 @@ Damit ist es perfekt geeignet, um auch aufwendige 2D-Spiele darzustellen, die me
 	\label{canvas_support}
 \end{figure}
 Der 2D-Kontext wird von allen modernen Browsern unterstützt, Opera Mini bildet hier die einzige Ausnahme; sogar mobile Browser bieten die API durchgehend an. Sogar Internet-Explorer, der dafür bekannt ist, bei der Untersütztung von Standarts aus dem Rahmen zu fallen, bietet Canvas ab der Version 9.0 an. Natürlich gibt es viele Internet-Nutzer, die auch sehr alte Versionen von Browsern benutzen, allerdings sind diese für die Zielgruppe der online Spielenden Bevölkerung nicht besonders relevant; die meisten dieser alten Browser werden in Firmen mit veralteter IT-Technik benutzt, wo das Spielen am Computer sowieso verboten ist.
-TODO: bild vom support einbinden.
 \subsection{Bibliotheken}
 Canvas ist die mit Abstand am weitesten verbreitete der hier vorgestellten Technologien. Dies ist wohl vor allem der niedrigen Lernkurve und dem schnellen Einstieg mit frühen Erfolgen zu danken. Daher ist die Community sehr aktiv und hat unzählige Tools, Bibliotheken und Frameworks entwickelt. Die wichtigsten dieser Tools werden hier in Kürze vorgestellt:
 \subsubsection{KineticJS}
-KineticJS ist eine auf HTML5 Canvas spezialisierte, quelloffene Bibliothek, d.h. sie bietet keinen Technologie-Fallback an. Sie abstrahiert die Canvas-API und bietet eine Objekt-Orientierte API an, in der \emph{Shapes} definiert werden, die zu Gruppen zusammengefasst werden und dann verschiedenen \emph{Layers} zugeordnet werden. Die Layer zusammen bilden den Szene-Graph
-en, der alle dargestellten Objekte beinhaltet. Die einzelnen Objekte der Szene können jetzt unabhängig animiert und transformiert werden. Dabei ist nicht nur Rotation und Translation mö
-glich, sondern z.b. auch Farb-Transformation u.Ä. Dazu kommt noch eine ereignis-basierte Architektur, mit der Animationen synchronisiert werden können.
+KineticJS ist eine auf HTML5 Canvas spezialisierte, quelloffene Bibliothek, d.h. sie bietet keinen Technologie-Fallback an. Sie abstrahiert die Canvas-API und bietet eine Objekt-Orientierte API an, in der \emph{Shapes} definiert werden, die zu Gruppen zusammengefasst werden und dann verschiedenen \emph{Layers} zugeordnet werden. Die Layer zusammen bilden den Szene-Graphen, der alle dargestellten Objekte beinhaltet. Die einzelnen Objekte der Szene können jetzt unabhängig animiert und transformiert werden. Dabei ist nicht nur Rotation und Translation möglich, sondern z.b. auch Farb-Transformation u.Ä. Dazu kommt noch eine ereignis-basierte Architektur, mit der Animationen synchronisiert werden können.
 \paragraph{Beispiel}
 Anbei ein kleines Beispiel, wie der KintectJS-Code aussieht. In diesem Beispiel wird eine neue Szene (auch Stage genannt) angelegt und ein rotes Dreieck an einer zufälligen Position angezeigt.
 \begin{figure}[h!]
@@ -116,8 +113,7 @@ Anbei ein kleines Beispiel, wie der KintectJS-Code aussieht. In diesem Beispiel 
 	\caption{KineticJS Beispiel}
 	\label{kineticjs_example}
 \end{figure}
-\paragraph{Verwendung} KineticJS wird bereits in vielen verschiedenen aktiven Projekten eingesetzt, auf http://kineticjs.com/ gibt es eine ganze Auswahl von verschiedenen Browser-Spielen, die mit dieser Bibliothek entwickelt wurden. Im Entwickler-Forum Stackoverflow gibt es hunderte Fragen zum Thema und über Google lassen sich Dutzende Tutorials finden, wie kleine Spie
-le mit KineticJS entwickelt werden können.\cite{KineticJS}
+\paragraph{Verwendung} KineticJS wird bereits in vielen verschiedenen aktiven Projekten eingesetzt, auf http://kineticjs.com/ gibt es eine ganze Auswahl von verschiedenen Browser-Spielen, die mit dieser Bibliothek entwickelt wurden. Im Entwickler-Forum Stackoverflow gibt es hunderte Fragen zum Thema und über Google lassen sich Dutzende Tutorials finden, wie kleine Spiele mit KineticJS entwickelt werden können.\cite{KineticJS}
 \subsubsection{EaselJS}
 EaselJS ist eine Bibliothek, deren API an Flash angelehnt ist. So fällt der Übergang leichter. Darüber hinaus existieren verschiedene Tools, die alle auf (ehemalige) Flash-Entwickler abzielen. Zum Beispiel gibt es EaselFL, ein Flash-Fallback für alte Browser, die Canvas nicht unterstützen, oder Zoe, ein Exporter für SWF-Animationen in EaselJS-Spritesheets.
 \paragraph{TweenJS/SoundJS/PreloadJS} EaselJS kümmert sich nur um die reine Arbeit mit HTML5 Canvas, Funktionen wie Animationen und Transformationen oder Sounds sind in eigenen Modulen gekapselt:
@@ -137,7 +133,7 @@ Wie bereits erwähnt, ist die API von Canvas sehr schlicht und einfach zu erlern
 \end{figure}
 \subsection{Performance}
 Mithilfe des oben erwähnten Benchmark-Tests wurden auf einem Desktop-Rechner 8500, auf einem Smartphone 230 und auf einem Macbook 4000 Objekte simultan bei 30FPS dargestellt. Damit ist Canvas auf jeden Fall geeignet, um auch komplexe Browser-Spiele für PCs und Laptops zu entwickeln. Einfache Spiele mit nur wenig Polygonen dürften auch auf Handys kein Problem sein. Allerdings ist die Zeichengeschwindigkeit auf dem Smartphone auch nicht konstant, sonder fällt manchmal stark ab. Für grafikgewaltige Handyspiele, die es mit nativen Apps bereits gibt, ist Canvas-HTML5 sicherlich nicht geeignet.
-\paragraph{Verbesserungen} Zu beachten ist, dass meine Implementierung einer Canvas-Renderfunktion recht naiv war. Es ist sicherlich möglich, hier durch verschiedene Tricks mehr Performance zu erreichen, größere Spiele lassen sich dadurch aber trotzdem nicht relasieren. Im folgenden sind verschiedene Techniken vorgestellt, um die Performance von Canvas-Spielen zu verbessern.
+\paragraph{Verbesserungen} Zu beachten ist, dass die Implementierung der Canvas-Renderfunktion recht naiv war. Es ist sicherlich möglich, hier durch verschiedene Tricks mehr Performance zu erreichen, größere Spiele lassen sich dadurch aber trotzdem nicht relasieren. Im folgenden sind verschiedene Techniken vorgestellt, um die Performance von Canvas-Spielen zu verbessern.
 \paragraph{Pre-Rendering in unsichtbares Canvas} Eine gängige Technik ist es, z.B. eine komplexe Hintergrund-Szenerie, die sich jeoch selten ändert, einmal zu rendern und in einem unsichtbaren zweiten Canvas-Element zwischenzuspeichern. Das Bild kann dann für jeden Frame in das sichtbare Canvas kopiert werden, was sehr effizient möglich ist.
 \paragraph{Neuzeichnen von Bereichen} Bei manchen Anwendungen ändert sich nicht bei jedem neuen Frame der gesamte Bildschirm, sondern nur ein kleiner Teilausschnitt (ein Ball bewegt sich über ein statisches Spielfeld). Hier wäre es möglich, nur den Teil des Canvas neu zu zeichnen, der sich auch tatsächlich verändert hat.
 \paragraph{Konfiguration des Zeichenautomaten nur ändern wenn nötig} Wie bereits im Kapitel \emph{API} vorgestellt, ist es möglich den Zeichenmodus einmal festzulegen und dann gleiche Zeichenoperationen durchzuführen. So ist es zum Beispiel deutlich performanter, erst alle gestrichelten Linien und dann alle durchgezogenen Linien in einer Szenerie zu zeichnen als immer abwechselnd, da so das Canvas-Element intern Optimierungen durchführen kann.
@@ -157,7 +153,7 @@ Sowohl die großen Differenzen der Performance verschiedener Browser als auch de
 \section{WebGL}
 Einen ganz anderen als Canvas verfolgt die Technologie WebGL. Hier wird nicht eine ganz neue API definiert, sondern die bereits bekannte API von OpelGL im Browser zu Verfügung gestellt.
 \subsection{Technologie}
-Genau wie HTML5-Canvas ist auch WebGL von der Khronos Group spezifiziert und wird über den <canvas>-Tag ins Dokument eingebunden. Der Unterschied besteht darin, dass nicht das \emph{2d}-Kontext-Objekt, sonder das \emph{webgl}-Kontext-Objekt genutzt wird. Dieses stellt die (recht umfangreiche) API zur Verfügung, um mit WebGL zu arbeiten. Im Gegensatz zu Canvas, dessen API auf Schlichtheit und eine niedrige Lernkurve abzielt, bringt WebGL im Grunde die gesamte OpenGL-Bibliothek in den Browser. Dabei steht nicht eine schlanke API, sondern Performance im Vordergrund.\cite{WebGLSpec}
+Genau wie HTML5-Canvas ist auch WebGL von der Khronos Group spezifiziert und wird über den \textless canvas\textgreater-Tag ins Dokument eingebunden. Der Unterschied besteht darin, dass nicht das \emph{2d}-Kontext-Objekt, sonder das \emph{webgl}-Kontext-Objekt genutzt wird. Dieses stellt die (recht umfangreiche) API zur Verfügung, um mit WebGL zu arbeiten. Im Gegensatz zu Canvas, dessen API auf Schlichtheit und eine niedrige Lernkurve abzielt, bringt WebGL im Grunde die gesamte OpenGL-Bibliothek in den Browser. Dabei steht nicht eine schlanke API, sondern Performance im Vordergrund.\cite{WebGLSpec}
 \paragraph{3D oder 2D?} Entgegen der landläufigen Meinung ist WebGL \emph{keine} 3D-API, sondern unterstützt von Haus aus nur 2D-Zeichnungen. Allerdings ist es möglich, die 3D-Fähigkeit nachzurüsten und dabei trotzdem hochperformant zu bleiben, indem dieser Code direkt in GLSL implementiert werden kann
 \paragraph{Nativer Shader-Code} Die \emph{OpenGL Shading Language} ist eine an C angelehnte Sprache, um Programme zu schreiben, die direkt auf der Grafikkarte ausgeführt werden. Sie dienen zum Beispiel dazu, die Position von Objekten im dreidimensionalen Raum zu berechnen oder die Farbe oder Textur eines Objektes zu bestimmen. Auch in WebGL können solche GLSL-Shader geschrieben und direkt im Browser kompiliert werden. So können Grafikberechnungen auf der Grafikkarte hoch-parallelisiert ausgeführt werden, was für die enorme Performance von WebGL im Vergleich zu anderen Technologien verantwortlich ist. Hier im Shader-Code würde man die Logik für das Umrechnen von 3D-Objekte in 2D-Objekte vornhemen.\cite{WebGLSpec}
 \paragraph{Komplexe API} Dass WebGL so effizient arbeiten kann, muss der Entwickler einige Kompromisse eingehen. Die auf dem Gebiet der 3D-Spieleentwicklung für Desktop-PCs unerfahrenen Entwickler werden die API sicherlich als unintuitiv und sperrig empfinden. So müssen zum Zeichnen eines einfachen Quadrats folgende Schritte durchgeführt werden:
@@ -221,7 +217,7 @@ Dadurch, dass die Anzahl der Objekte immer konstant bleibt, ist ein statischer P
 \paragraph{Ausblick} Da durch WebGL alle Fähigkeiten einer Grafikkarte in JavaScript offen gelegt werden, ist eine sehr genaue Steuerung und damit auch Optimierung des Zeichenprozesses möglich. Diese genau zu erklären, würde den Rahmen in dieser Ausarbeitung sprengen. Zusammenfassend lässt sich sagen, dass WebGL zwar kompliziert und die dahinterstehenden Konzepte umfangreich und schwierig zu verstehen sind, die Technologie selbst aber dadurch in Sachen Performance den anderen vorgestellten Technologien deutlich überlegen ist.
 \newpage
 \subsubsection{Browser-Vergleich} Beim Vergleich der 3 wichtigsten Browser fallen sowohl die sehr hohe Performance von Chrome als auch die recht schwache Performance des Internet-Explorer ins Auge. Das Problem in Internet-Explorer ist höchstwahrscheinlich eine fehlende Unterstützung der Grafikkarte - dadurch muss die Berechnung der Vertizes usw. in der CPU ablaufen und alle Vorteile von WebGL können nicht ausgespielt werden. Chrome hat hier eine deutlich bessere Anbindung an die Grafikkarte; dadurch kann die Berechnung hoch-parallelisiert ablaufen und eine sehr hohe Objekt-Zahl erreicht werden.\cite{WebGLBrowser}
-\paragraph{Widersprüchliche Ergebnisse} In einem Benchmark-Test der Website scirra.com zeichnet sich ein ganz anderes Bild. Hier kann der Internet Explorer 11 deutlich mehr Objekte zeichnen als Chrome oder Firefox. Auch das weisst darauf hin, dass in meinem Test der Internet Explorer die große Rechenleistung der Grafikkarte aus unbekannten Gründen, höchstwahrscheinlich Treiberproblemen, nicht nutzen kann. Daraus wird ersichtlich, dass Benchmarks mit kleinen, dedizierten Beispielen auf nur wenigen Plattformen äußerst missverständlich sein können; es wird hier keine Aussage darüber getroffen, dass Internet Explorer eine schlechtere Performance liefert als Chrome, sondern dass durch viele Abstraktionsschichten zwischen Hardware und Software sehr große Differenzen auftreten können, auch wenn die theoretisch mögliche Performance identisch ist.
+\paragraph{Widersprüchliche Ergebnisse} In einem Benchmark-Test der Website scirra.com zeichnet sich ein ganz anderes Bild. Hier kann der Internet Explorer 11 deutlich mehr Objekte zeichnen als Chrome oder Firefox. Auch das weisst darauf hin, dass im Test der Internet Explorer die große Rechenleistung der Grafikkarte aus unbekannten Gründen, höchstwahrscheinlich Treiberproblemen, nicht nutzen kann. Daraus wird ersichtlich, dass Benchmarks mit kleinen, dedizierten Beispielen auf nur wenigen Plattformen äußerst missverständlich sein können; es wird hier keine Aussage darüber getroffen, dass Internet Explorer eine schlechtere Performance liefert als Chrome, sondern dass durch viele Abstraktionsschichten zwischen Hardware und Software sehr große Differenzen auftreten können, auch wenn die theoretisch mögliche Performance identisch ist.
 \begin{figure}[H]
 	\includegraphics[width=\textwidth]{assets/browser_comp_webgl} 
 	\caption{Browser-Vergleich WebGL}
